force-app/main/default/objects/Lead/fields/AdForm_Response_ID__c.field-meta.xml
<CustomField>
    <fullName>AdForm_Response_ID__c</fullName>
    <label>AdForm Response ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>