force-app/main/default/objects/Lead/fields/Adobe_Sync__c.field-meta.xml
<CustomField>
    <fullName>Adobe_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adobe Sync</label>
    <type>Checkbox</type>
</CustomField>