force-app/main/default/objects/Lead/fields/Adobe_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>Adobe_Sync_Time__c</fullName>
    <label>Adobe Sync Time</label>
    <type>DateTime</type>
</CustomField>