force-app/main/default/objects/Lead/fields/Advertiser_Account__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Account__c</fullName>
    <label>Advertiser Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>