force-app/main/default/objects/Lead/fields/Budget_Availablility_Budget_Source__c.field-meta.xml
<CustomField>
    <fullName>Budget_Availablility_Budget_Source__c</fullName>
    <label>Budget Availablility &amp; Budget Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, Own Source</fullName>
            </value>
            <value>
                <fullName>Yes, Loan Approved</fullName>
            </value>
            <value>
                <fullName>Loan In Progress</fullName>
            </value>
            <value>
                <fullName>Budget not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>