force-app/main/default/objects/Lead/fields/Call_Centre_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Call_Centre_Remarks__c</fullName>
    <label>Call Centre Remarks</label>
    <type>TextArea</type>
</CustomField>