force-app/main/default/objects/Lead/fields/ConversionCheck__c.field-meta.xml
<CustomField>
    <fullName>ConversionCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ConversionCheck</label>
    <type>Checkbox</type>
</CustomField>