force-app/main/default/objects/Lead/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <label>Country Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>