force-app/main/default/objects/Lead/fields/Customer_Designation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Designation__c</fullName>
    <inlineHelpText>Contact Person&apos;s Designation</inlineHelpText>
    <label>Customer Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>