force-app/main/default/objects/Lead/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <label>Employee Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>