force-app/main/default/objects/Lead/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <label>Employee Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>