force-app/main/default/objects/Lead/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <label>Engagement Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>