force-app/main/default/objects/Lead/fields/Facebook_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Lead_Id__c</fullName>
    <label>Facebook Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>