force-app/main/default/objects/Lead/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Notification_Frequency</valueSetName>
    </valueSet>
</CustomField>