force-app/main/default/objects/Lead/fields/Is_our_contact_a_Key_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Is_our_contact_a_Key_Decision_Maker__c</fullName>
    <label>Is our contact a Key Decision Maker?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>