force-app/main/default/objects/Lead/fields/IsPrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPrimaryContact</label>
    <type>Checkbox</type>
</CustomField>