force-app/main/default/objects/Lead/fields/Lead_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_By__c</fullName>
    <label>Lead Created By</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>