force-app/main/default/objects/Lead/fields/Lead_Location__c.field-meta.xml
<CustomField>
    <fullName>Lead_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>