force-app/main/default/objects/Lead/fields/Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner__c</fullName>
    <formula>IF(
    ISBLANK(Owner:Queue.Id),
    Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName,
    Owner:Queue.QueueName
)</formula>
    <label>Lead Owner</label>
    <type>Text</type>
</CustomField>