force-app/main/default/objects/Lead/fields/Lead_Source_Direct_Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Direct_Lead__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Lead</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Referral from Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>