force-app/main/default/objects/Lead/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <label>Lead Sub-Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AC Dealer</fullName>
            </value>
            <value>
                <fullName>Area Sales Manager</fullName>
            </value>
            <value>
                <fullName>Backend Team</fullName>
            </value>
            <value>
                <fullName>Branch Sales Manager</fullName>
            </value>
            <value>
                <fullName>Branch Service Manager</fullName>
            </value>
            <value>
                <fullName>Business Manager</fullName>
            </value>
            <value>
                <fullName>Constructors - Building Constructors</fullName>
            </value>
            <value>
                <fullName>Constructors - Canteen Constructors</fullName>
            </value>
            <value>
                <fullName>Constructors - Laundry Constructors</fullName>
            </value>
            <value>
                <fullName>Constructors - MES Constructors</fullName>
            </value>
            <value>
                <fullName>Consultant - Architech/PMC Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant - Design Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant - Kitchen Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant - Laundry Consultant</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>Dealers - Kitchen equipment supplier</fullName>
            </value>
            <value>
                <fullName>Dealers - Medical equipment supplier</fullName>
            </value>
            <value>
                <fullName>Dealers - Other equipment supplier</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Domestic Dealers</fullName>
            </value>
            <value>
                <fullName>Domestic Distributors</fullName>
            </value>
            <value>
                <fullName>DSO Service Engineer</fullName>
            </value>
            <value>
                <fullName>Facility Management Companies</fullName>
            </value>
            <value>
                <fullName>Field Team</fullName>
            </value>
            <value>
                <fullName>Foreigners</fullName>
            </value>
            <value>
                <fullName>Franchisee Owner</fullName>
            </value>
            <value>
                <fullName>Institutional dealers</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Regional Sales Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>