force-app/main/default/objects/Lead/fields/Lead_Transfer_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Transfer_Reason__c</fullName>
    <label>Lead Transfer Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>