force-app/main/default/objects/Lead/fields/MergeRecordId__c.field-meta.xml
<CustomField>
    <fullName>MergeRecordId__c</fullName>
    <label>MergeRecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>