force-app/main/default/objects/Lead/fields/Meta_Platform__c.field-meta.xml
<CustomField>
    <fullName>Meta_Platform__c</fullName>
    <label>Meta Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>