force-app/main/default/objects/Lead/fields/ModifyDateToStage2__c.field-meta.xml
<CustomField>
    <fullName>ModifyDateToStage2__c</fullName>
    <label>ModifyDateToStage2</label>
    <type>DateTime</type>
</CustomField>