force-app/main/default/objects/Lead/fields/Most_Recent_Enquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Enquiry_Date__c</fullName>
    <label>Most Recent Enquiry Date</label>
    <type>DateTime</type>
</CustomField>