force-app/main/default/objects/Lead/fields/Multiple_Enquiries__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Enquiries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Enquiries?</label>
    <type>Checkbox</type>
</CustomField>