force-app/main/default/objects/Lead/fields/Name_and_Place_of_the_Event__c.field-meta.xml
<CustomField>
    <fullName>Name_and_Place_of_the_Event__c</fullName>
    <label>Name and Place of the Event</label>
    <type>TextArea</type>
</CustomField>