force-app/main/default/objects/Lead/fields/Order_of_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_of_Status__c</fullName>
    <formula>CASE(
  Status,
  &quot;Unvalidated&quot;, 1,
  &quot;RNR&quot;, 2,
  &quot;Unqualified&quot;, 3,
  &quot;Validated&quot;, 4,
  &quot;Contacted&quot;, 5,
  &quot;Nurturing&quot;, 6,
  &quot;Discarded&quot;, 7,
  &quot;Converted&quot;, 8,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order of Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>