force-app/main/default/objects/Lead/fields/Other_Locations__c.field-meta.xml
<CustomField>
    <fullName>Other_Locations__c</fullName>
    <label>Other Locations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>