force-app/main/default/objects/Lead/fields/Partner_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Partner_Mobile__c</fullName>
    <label>Partner Mobile</label>
    <type>Phone</type>
</CustomField>