force-app/main/default/objects/Lead/fields/ProvisionLeadCheck__c.field-meta.xml
<CustomField>
    <fullName>ProvisionLeadCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProvisionLeadCheck</label>
    <type>Checkbox</type>
</CustomField>