force-app/main/default/objects/Lead/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <label>Query from Webform</label>
    <type>TextArea</type>
</CustomField>