force-app/main/default/objects/Lead/fields/Question_3__c.field-meta.xml
<CustomField>
    <fullName>Question_3__c</fullName>
    <label>Question 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>