force-app/main/default/objects/Lead/fields/Reason_for_Disqualification__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Disqualification__c</fullName>
    <label>Reason for Disqualification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Machine Requirement</fullName>
            </value>
            <value>
                <fullName>No Budget Available</fullName>
            </value>
            <value>
                <fullName>Inadequate Space Availability</fullName>
            </value>
            <value>
                <fullName>Routed through Dealer</fullName>
            </value>
            <value>
                <fullName>Cancellation of Tender</fullName>
            </value>
            <value>
                <fullName>Service Terms</fullName>
            </value>
            <value>
                <fullName>Product Not Available</fullName>
            </value>
            <value>
                <fullName>Budget not available</fullName>
                <isActive>false</isActive>
                <label>Budget not available</label>
            </value>
            <value>
                <fullName>Customer not able to complete infrastructure in 30 days</fullName>
                <isActive>false</isActive>
                <label>Customer not able to complete infrastructure in 30 days</label>
            </value>
            <value>
                <fullName>Product Availability</fullName>
                <isActive>false</isActive>
                <label>Product Availability</label>
            </value>
            <value>
                <fullName>Purchase Timeline more than 90 days</fullName>
                <isActive>false</isActive>
                <label>Purchase Timeline more than 90 days</label>
            </value>
            <value>
                <fullName>Site not suitable</fullName>
                <isActive>false</isActive>
                <label>Site not suitable</label>
            </value>
            <value>
                <fullName>Space not available</fullName>
                <isActive>false</isActive>
                <label>Space not available</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>