force-app/main/default/objects/Lead/fields/Reasons_for_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Visit__c</fullName>
    <label>Reasons for Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Pre-site inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>