force-app/main/default/objects/Lead/fields/Region_Map__c.field-meta.xml
<CustomField>
    <fullName>Region_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region Map</label>
    <referenceTo>Region_Map__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>