force-app/main/default/objects/Lead/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <formula>IF(NOT(ISBLANK( Region_Map__r.Zipcode__c )) &amp;&amp; 
      PostalCode =  Region_Map__r.Zipcode__c  ,
    Region_Map__r.Region__c ,
   NULL)</formula>
    <label>Region Name</label>
    <type>Text</type>
</CustomField>