force-app/main/default/objects/Lead/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Washing</fullName>
            </value>
            <value>
                <fullName>Drying</fullName>
            </value>
            <value>
                <fullName>Ironing</fullName>
            </value>
            <value>
                <fullName>Folding</fullName>
            </value>
            <value>
                <fullName>Dry Cleaning</fullName>
            </value>
            <value>
                <fullName>Finishing Equipment&apos;s Accessories</fullName>
            </value>
            <value>
                <fullName>Essentials</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>